# nagare

./: CLAUDE.md  README.md  main.py  pyproject.toml
docs/: NAGARE.md  PROBLEM_REPORT.md
docs/plans/: 2026-03-13-interactive-mode-design.md  2026-03-13-interactive-mode-impl.md  2026-03-13-nagare-implementation.md  2026-03-13-nagare-tui-design.md  2026-03-14-notifications-design.md  2026-03-14-notifications-impl.md  2026-03-14-tmux-plugin-design.md  2026-03-14-tmux-plugin-impl.md  2026-03-24-agent-messaging-design.md
src/nagare/: __init__.py  app.py  config.py  daemon.py  history.py  hooks.py  icons.py  log.py  mcp_server.py  models.py  nagare.tcss  new_session.py  new_session.tcss  notifs.py  notifs.tcss  opencode_plugin.ts  pick.py  pick.tcss  popup_notif.py  popup_notif.tcss  quick_prototype.py  registry.py  session.py  session_manager.py  session_manager.tcss  setup.py  sounds.py  state.py  themes.py  tokens.py  voice.py
src/nagare/notifications/: base.py  deliver.py  store.py  tmux.py
src/nagare/tmux/: __init__.py  attach.py  capture.py  scanner.py  status.py
src/nagare/transport/: base.py  keys.py  polling.py
tests/: test_app.py  test_attach.py  test_capture.py  test_cli.py  test_config.py  test_daemon.py  test_footer_bar.py  test_hooks.py  test_integration.py  test_keys.py  test_models.py  test_notification_store.py  test_notifications.py  test_notifs.py  test_pick.py  test_polling_transport.py  test_popup_notif.py  test_preview_pane.py  test_scanner.py  test_session_detail.py  test_session_list.py  test_state.py  test_status.py  test_terminal_view.py
(+6 files in other folders)
