[project]
name = "nagare"
version = "0.1.0"
description = "Agent manager TUI for Claude Code sessions in tmux"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "textual>=3.0.0",
]

[project.scripts]
nagare = "nagare:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nagare"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "textual-dev>=1.8.0",
]
